[gd_scene load_steps=10 format=3 uid="uid://h1e6oc0pa5i3"]

[ext_resource type="Script" path="res://game.gd" id="1_5sbga"]
[ext_resource type="Script" path="res://Input.gd" id="1_821c2"]
[ext_resource type="FontFile" uid="uid://bjrati5bloksr" path="res://fonts/IBMPlexMono-Regular.ttf" id="1_er73w"]
[ext_resource type="Script" path="res://CommandProcessor.gd" id="2_oqoy1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1of2w"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l25cx"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8p1to"]
bg_color = Color(0.313726, 0.313726, 0.313726, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qpf4u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lyxml"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5sbga")

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource("2_oqoy1")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1of2w")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_l25cx")

[node name="Scroll" type="ScrollContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="HistoryRows" type="VBoxContainer" parent="Background/MarginContainer/Rows/GameInfo/Scroll"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8p1to")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
layout_mode = 2

[node name="Carat" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_er73w")
theme_override_font_sizes/font_size = 28
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_er73w")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_qpf4u")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lyxml")
max_length = 48
script = ExtResource("1_821c2")

[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
